# flooding_alerts

./: README.md  pyproject.toml
src/flooding_alerts/: crew.py  data.json  main.py
src/flooding_alerts/config/: agents.yaml  tasks.yaml
